src/snapshots/diffsitter__tests__short_python.snap
---
source: src/main.rs
assertion_line: 350
expression: diff_hunks

---
(
    Hunks(
        [],
    ),
    Hunks(
        [
            Hunk(
                [
                    Line {
                        line_index: 1,
                        entries: [
                            Entry {
                                reference: {Node " (1, 4) - (1, 7)},
                                text: "\"",
                                start_position: Point {
                                    row: 1,
                                    column: 4,
                                },
                                end_position: Point {
                                    row: 1,
                                    column: 5,
                                },
                            },
                            Entry {
                                reference: {Node " (1, 4) - (1, 7)},
                                text: "\"",
                                start_position: Point {
                                    row: 1,
                                    column: 5,
                                },
                                end_position: Point {
                                    row: 1,
                                    column: 6,
                                },
                            },
                            Entry {
                                reference: {Node " (1, 4) - (1, 7)},
                                text: "\"",
                                start_position: Point {
                                    row: 1,
                                    column: 6,
                                },
                                end_position: Point {
                                    row: 1,
                                    column: 7,
                                },
                            },
                        ],
                    },
                ],
            ),
            Hunk(
                [
                    Line {
                        line_index: 3,
                        entries: [
                            Entry {
                                reference: {Node " (3, 4) - (3, 7)},
                                text: "\"",
                                start_position: Point {
                                    row: 3,
                                    column: 4,
                                },
                                end_position: Point {
                                    row: 3,
                                    column: 5,
                                },
                            },
                            Entry {
                                reference: {Node " (3, 4) - (3, 7)},
                                text: "\"",
                                start_position: Point {
                                    row: 3,
                                    column: 5,
                                },
                                end_position: Point {
                                    row: 3,
                                    column: 6,
                                },
                            },
                            Entry {
                                reference: {Node " (3, 4) - (3, 7)},
                                text: "\"",
                                start_position: Point {
                                    row: 3,
                                    column: 6,
                                },
                                end_position: Point {
                                    row: 3,
                                    column: 7,
                                },
                            },
                        ],
                    },
                ],
            ),
            Hunk(
                [
                    Line {
                        line_index: 6,
                        entries: [
                            Entry {
                                reference: {Node identifier (6, 4) - (6, 5)},
                                text: "x",
                                start_position: Point {
                                    row: 6,
                                    column: 4,
                                },
                                end_position: Point {
                                    row: 6,
                                    column: 5,
                                },
                            },
                            Entry {
                                reference: {Node = (6, 10) - (6, 11)},
                                text: "=",
                                start_position: Point {
                                    row: 6,
                                    column: 10,
                                },
                                end_position: Point {
                                    row: 6,
                                    column: 11,
                                },
                            },
                            Entry {
                                reference: {Node integer (6, 12) - (6, 13)},
                                text: "1",
                                start_position: Point {
                                    row: 6,
                                    column: 12,
                                },
                                end_position: Point {
                                    row: 6,
                                    column: 13,
                                },
                            },
                        ],
                    },
                ],
            ),
        ],
    ),
)
