src/snapshots/diffsitter__tests__short_python_true.snap
---
source: src/main.rs
expression: diff_hunks
---
Ok(
    RichHunks(
        [
            New(
                Hunk(
                    [
                        Line {
                            line_index: 1,
                            entries: [
                                Entry {
                                    reference: {Node " (1, 4) - (1, 7)},
                                    text: "\"",
                                    start_position: Point {
                                        row: 1,
                                        column: 4,
                                    },
                                    end_position: Point {
                                        row: 1,
                                        column: 5,
                                    },
                                    kind_id: 102,
                                },
                                Entry {
                                    reference: {Node " (1, 4) - (1, 7)},
                                    text: "\"",
                                    start_position: Point {
                                        row: 1,
                                        column: 5,
                                    },
                                    end_position: Point {
                                        row: 1,
                                        column: 6,
                                    },
                                    kind_id: 102,
                                },
                                Entry {
                                    reference: {Node " (1, 4) - (1, 7)},
                                    text: "\"",
                                    start_position: Point {
                                        row: 1,
                                        column: 6,
                                    },
                                    end_position: Point {
                                        row: 1,
                                        column: 7,
                                    },
                                    kind_id: 102,
                                },
                            ],
                        },
                    ],
                ),
            ),
            New(
                Hunk(
                    [
                        Line {
                            line_index: 3,
                            entries: [
                                Entry {
                                    reference: {Node " (3, 4) - (3, 7)},
                                    text: "\"",
                                    start_position: Point {
                                        row: 3,
                                        column: 4,
                                    },
                                    end_position: Point {
                                        row: 3,
                                        column: 5,
                                    },
                                    kind_id: 102,
                                },
                                Entry {
                                    reference: {Node " (3, 4) - (3, 7)},
                                    text: "\"",
                                    start_position: Point {
                                        row: 3,
                                        column: 5,
                                    },
                                    end_position: Point {
                                        row: 3,
                                        column: 6,
                                    },
                                    kind_id: 102,
                                },
                                Entry {
                                    reference: {Node " (3, 4) - (3, 7)},
                                    text: "\"",
                                    start_position: Point {
                                        row: 3,
                                        column: 6,
                                    },
                                    end_position: Point {
                                        row: 3,
                                        column: 7,
                                    },
                                    kind_id: 102,
                                },
                            ],
                        },
                    ],
                ),
            ),
            New(
                Hunk(
                    [
                        Line {
                            line_index: 6,
                            entries: [
                                Entry {
                                    reference: {Node identifier (6, 4) - (6, 5)},
                                    text: "x",
                                    start_position: Point {
                                        row: 6,
                                        column: 4,
                                    },
                                    end_position: Point {
                                        row: 6,
                                        column: 5,
                                    },
                                    kind_id: 1,
                                },
                                Entry {
                                    reference: {Node = (6, 10) - (6, 11)},
                                    text: "=",
                                    start_position: Point {
                                        row: 6,
                                        column: 10,
                                    },
                                    end_position: Point {
                                        row: 6,
                                        column: 11,
                                    },
                                    kind_id: 46,
                                },
                                Entry {
                                    reference: {Node integer (6, 12) - (6, 13)},
                                    text: "1",
                                    start_position: Point {
                                        row: 6,
                                        column: 12,
                                    },
                                    end_position: Point {
                                        row: 6,
                                        column: 13,
                                    },
                                    kind_id: 92,
                                },
                            ],
                        },
                    ],
                ),
            ),
        ],
    ),
)
